<resources>
    <string name="app_name" translatable="false">Setup Bike</string>
    <string name="welcome" translatable="false">Вітальний екран</string>
    <string name="Add_bike" translatable="false">Додати байк</string>
    <string name="Save" translatable="false">Зберегти</string>
    <string name="Choose_ur_bike" translatable="false">Виберіть ваш байк</string>
    <string name="CompCheker">Чекер</string>
    <string name="Discover">Вивчай</string>
    <string name="GARAGE">ГАРАЖ</string>
    <string name="Garage">Гараж</string>
    <string name="Stack">Stack(mm) </string>
    <string name="_1">-</string>
    <string name="add_new_setup">+</string>
    <string name="etc">…</string>
    <string name="bikes_geometry_based">Базова геометрія байка</string>
    <string name="custom_settings">Кастомні налаштування</string>
    <string name="add">+</string>
    <string name="components_adjust">Компоненти байка</string>
    <string name="frame_geometry">Геометрія рами</string>
    <string name="two_strings">%1$s %2$s</string>
    <string name="go_back">Назад</string>

    <string name="top_tube_lenght">Top Tube Length(mm)</string>
    <string name="top_tube_length_label">%1$d mm</string>
    <string name="wheel_base">Wheel Base(mm)</string>
    <string name="wheel_base_label">%1$d mm</string>
    <string name="wheel_size">Розмір колес(in)</string>
    <string name="wheel_size_label">%1$d "in</string>
    <string name="word_ok">OK</string>
    <string name="stack_label">%1$d mm</string>
    <string name="stand_over_height">Stand-over Height(mm)</string>
    <string name="stand_over_height_label">%1$d mm</string>
    <string name="selected_size_label">Розмір рами: %1$s</string>
    <string name="seat_height">Seat Height(mm)</string>
    <string name="seat_height_label">%1$d mm</string>
    <string name="seat_tube_angle">Seat Tube Angle</string>
    <string name="seat_tube_angle_label">%1$d°</string>
    <string name="seat_tube_lenght">Seat Tube Length(mm)</string>
    <string name="seat_tube_length_label">%1$d mm</string>
    <string name="reach">Reach(mm)</string>
    <string name="reach_label">%1$d mm</string>
    <string name="head_tube_angle">Head Tube Angle</string>
    <string name="head_tube_angle_label">%1$d°</string>
    <string name="head_tube_lenght">Head Tube Length(mm)</string>
    <string name="head_tube_length_label">%1$d mm</string>
    <string name="body_height">Для зросту</string>
    <string name="body_height_label">%1$d сm</string>
    <string name="bottom_bracket_offset">Bottom Bracket Offset(mm)</string>
    <string name="bottom_bracket_offset_label">%1$d mm</string>
    <string name="chainstay_lenght">Chainstay Length(mm)</string>
    <string name="chainstay_length_label">%1$d mm</string>
    <string name="choosebike">Додавання байку</string>
    <string name="btn_confirm">Вибрати</string>
    <string name="firsttext">Вітаю в додатку SuB! Цей додаток спеціально створенний для райдерської спільноти. Паркуй свій байк у гараж і налаштовуй його</string>
    <string name="Menu">Меню</string>
    <string name="delete">-</string>
    <string name="Bike_components">Компоненти байка</string>
    <string name="Brand">Бренд</string>
    <string name="Series">Серія</string>
    <string name="sizesis">Розмірність</string>
    <string name="size_format">%1$s x %2$s mm</string>
    <string name="Shock">Аморт</string>
    <string name="Fork">Вилка</string>
    <string name="size_with_mm">%1$s mm</string>
    <string name="todo">TODO</string>
    <string name="Setups">Сетапи</string>
    <string name="test">test</string>
    <string name="Tyres_">Покришки:</string>
    <string name="Fork_">Вилка:</string>
    <string name="Shock_">Аморт:</string>
    <string name="Front">Передня</string>
    <string name="Rear">Задня</string>
    <string name="Other_optional_">Інше(опціонально):</string>
    <string name="wheel_size_string">%1$s in</string>
    <string name="You_can_add_notes_here">Сюди можна додати нотатки…</string>
    <string name="_2">--</string>
    <string name="_3">---</string>
    <string name="Tyres">Покришки</string>
    <string name="mark">оцінка</string>
    <string name="General">Загальне</string>
    <string name="g_outs">G-outs</string>
    <string name="numb_hands">Оніміння рук</string>
    <string name="square_edged_hits">Square-edged hits</string>
    <string name="rider_weight_shifts">Зміна положення тіла</string>
    <string name="bottom_out_sus">Пробивка підвіски</string>
    <string name="sus_swinging">Розкачка підвіски при педалюванні</string>
    <string name="stability">Стабільність</string>
    <string name="__24">--/24</string>
    <string name="Choose_option_in_proc_or_mm">Оберіть одиниці вимірювання в % або в mm</string>
    <string name="Redem">Скасувати</string>
    <string name="Tyre_plussines">Амортизація покришок</string>
    <string name="Pulling">Витягуваність</string>
    <string name="Average_mark">Average mark</string>
    <string name="info">info</string>
    <string name="Suspension">Підвіска</string>
    <string name="Rebound">ВІДСКОК</string>

    <string name="hint_hsr">High-speed-rebound(HSR) - відповідає за швидкий відскок під час великих, різких подій (наприклад, глибокого стискання або приземлення з стрибка); Рекомендація: встановити HSR на максимально повільний режим (закритий), особливо для даунхіллу, щоб уникнути надмірного rebound.</string>
    <string name="hint_lsr">Low-speed-rebound(LSR) - контролює повільні, більш тонкі відскоки (типові для щоденних нерівностей та відриву); Рекомендація: використовуйте LSR для точного налаштування rebound, регулюючи його до оптимального балансу між «плюшевість» та стабільністю.</string>

    <string name="Compression">КОМПРЕСІЯ</string>
    <string name="hint_hsc">High-speed-compression - Контролює стискання підвіски під час різких, високошвидкісних подій – таких як drop’и, приземлення або великі удари. HSC встановлює поріг, при якому високошвидкісна частина демпфуючого контуру починає діяти, запобігаючи bottom-out. Рекомендація: Налаштовуйте HSC для забезпечення достатнього опору при великих навантаженнях. Почніть з рекомендованих виробником налаштувань, а потім експериментуйте на трасі, поступово збільшуючи або зменшуючи HSC, щоб отримати оптимальну підтримку під час різких ударів без надмірного жорсткого відгуку.</string>
    <string name="hint_lsc">Low-speed-compression - Контролює стискання підвіски при повільних, контрольованих рухах – наприклад, при їзді по кореням, невеликих нерівностях або при педальному бобінгу. Це забезпечує плавне стиснення і підтримку геометрії під час щоденних навантажень. Рекомендація: Використовуйте LSC для тонкого налаштування підвіски на повсякденних трасах. Почніть із базових значень, рекомендованих виробником, і поступово коригуйте, щоб уникнути надмірної жорсткості, яка може призводити до затримки реакції підвіски на невеликі нерівності.</string>
    <string name="Hint_setup">Підсказа сетапу</string>
    <string name="Adding_component">Додавання компоненту</string>
    <string name="Confirm">Підтвердити</string>
    <string name="Brand_">Бренд:</string>
    <string name="Write_brand">Введіть бренд</string>
    <string name="Year">Рік:</string>
    <string name="Write_year">Введіть рік</string>
    <string name="Model_">Модель:</string>
    <string name="Write_model">Введіть модель</string>
    <string name="Size___travel">Розмір/Хід:</string>
    <string name="Write_size_or_travel">Введіть розмір або хід</string>
    <string name="Weight_">Вага:</string>
    <string name="Write_weight">Введіть вагу</string>
    <string name="Type">Тип компонента</string>
    <string name="Component_Type">Тип компонента</string>
    <string name="Click_here">Натисність сюди</string>
    <string name="contain">включати</string>
    <string name="Own_notes_">Власні нотатки:</string>
    <string name="Cartrige_">Картридж:</string>
    <string name="Add_photo_">Додати фото</string>
    <string name="button_process_jpg">Вирізати задній фон(для jpg)</string>
    <string name="button_crop_no_bg">Обрізати фото</string>
    <string name="button_add_photo">Вибрати фото без обробки</string>
    <string name="di_adder_img_textForjpg">Це допоможе видалити задній фон з jpg(jpeg) фото. Працює тільки з білим фоном!</string>
    <string name="di_adder_img_textForpng">Це просто додасть обрізане фото</string>
    <string name="Delete_bg">Видалити задній фон</string>
    <string name="Added_photo">Додане фото</string>
    <string name="Technical_service">Технічне обслуговування</string>
    <string name="Header_for_service">Годинне ТО та сервіс</string>
    <string name="component">Компонент</string>
    <string name="Hours">Години</string>
    <string name="twohunder_or_Year">200(Рік)</string>
    <string name="Riden_hours"><![CDATA[Накатаних годин ->]]></string>
    <string name="Notes_about_service">Нотатки про те, що робилось</string>
    <string name="Cost">Ціна</string>
    <string name="Component_that_serviced">Компонент що обслуговували</string>
    <string name="days_short">дн</string>
    <string name="Reciving_auto_notifi_about_service">Отримувати автоматичні сповіщення про ТО\n</string>
    <string name="Add_hour_auto">Додавати 1 годину автоматично раз в</string>
    <string name="Confirm_delete_bike">Ви дійсно бажаєте видалити велосипед з гаражу ?</string>
    <string name="Cancel">Відхилити</string>
    <string name="Service">Сервіс байку</string>
    <string name="Submodel_">Підмодель:</string>
    <string name="Add_photo_bike">Додайте фото байка\n</string>
    <string name="Requaired_inputs">Обов\'язкові данні</string>
    <string name="Unnessesary_info">Не обов\'язкові дані</string>
    <string name="Yourself_add_bike_data">Самому ввести дані байка</string>
    <string name="From_list">Вибрати зі списку</string>
    <string name="Save_and_go">Зберегети та перейти в гараж</string>
    <string name="can_be_adited_in_fututre_hint">(можна буде додати/змінити в додатку)</string>
    <string name="cannot_be_adited_in_fututre_hint">(не можлво буде додати/змінити)\n</string>
    <string name="Frame_size">Розмір рами</string>
    <string name="etc_sizes">Інші роміри</string>
    <string name="games">Міні гра</string>
    <string name="bg">background</string>
    <string name="setup_name">setup name</string>

    <string-array name="fork_seg_units_array">
        <item>%</item>
        <item>mm</item>
    </string-array>
    <string-array name="shock_seg_units_array">
        <item>%</item>
        <item>mm</item>
    </string-array>

    <string-array name="component_types">
        <item>Fork</item>
        <item>Shock</item>
        <item>Tyre</item>
        <item>Saddle</item>
        <item>Cranks</item>
        <item>Handlebar</item>
        <item>Rim</item>
    </string-array>

</resources>