<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/di_scrollvw_trwhite"
    android:padding="16dp">


    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        android:backgroundTint="@color/black"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/di_adder_img_textForpng"
        android:textColor="@color/green_strings"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnOkRemoveBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete_bg"
        android:backgroundTint="@color/black"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/di_adder_img_textForjpg"
        android:textColor="@color/green_strings"/>
</LinearLayout>