<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:padding="8dp"
    android:background="@drawable/kt_textviews_basic">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:autofillHints="no"
            android:background="@drawable/tb_end_start"
            android:gravity="center"
            android:hint="@string/Component_that_serviced"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/tr_white"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/img_delete"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/notesInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:hint="@string/Notes_about_service"
        android:imeOptions="actionNext"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/tr_white"
        tools:ignore="Autofill,TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/priceInput"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/Cost"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/tr_white"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:padding="8dp"/>
    </LinearLayout>
</LinearLayout>